--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body{
     max-width: 400px;
     background-color: #ffffff;
     color: #ffffff;
-    margin: 30px auto 0px; 
+    margin: 100px auto auto auto; 
     padding: 10px;
 }
 #controls,#stats{
