--- a/styles.css
+++ b/styles.css
@@ -1,40 +1,39 @@
-body{
-    background-color: #0a0a23;
-    
+body {
+  background-color: #0a0a23;
 }
-#text{
-    background-color: #0a0a23;
-    color: #ffffff;
-    padding: 10px;
+#text {
+  background-color: #0a0a23;
+  color: #ffffff;
+  padding: 10px;
 }
-#game{
-    max-width: 500px;
-    max-width: 400px;
-    background-color: #ffffff;
-    color: #ffffff;
-    margin: 100px auto auto auto; 
-    padding: 10px;
+#game {
+  max-width: 500px;
+  max-width: 400px;
+  background-color: #ffffff;
+  color: #ffffff;
+  margin: 100px auto auto auto;
+  padding: 10px;
 }
-#controls,#stats{
-    border: 1px solid #0a0a23;
-    color: #0a0a23;
-    padding: 5px;
-    
+#controls,
+#stats {
+  border: 1px solid #0a0a23;
+  color: #0a0a23;
+  padding: 5px;
 }
-#monsterStats{
-    display: none;
-    border: 1px solid #0a0a23;
-    color: #ffffff;
-    padding: 5px;
-    background-color: #c70d0d;
+#monsterStats {
+  display: none;
+  border: 1px solid #0a0a23;
+  color: #ffffff;
+  padding: 5px;
+  background-color: #c70d0d;
 }
-.stat{
-    padding-right: 10px;
+.stat {
+  padding-right: 10px;
 }
-button{
-    cursor: pointer;
-    color: #0a0a23;
-    background-color: #feac32;
-    background-image: linear-gradient(#fecc4c,#ffac33);
-    border: 3px solid #feac32;
+button {
+  cursor: pointer;
+  color: #0a0a23;
+  background-color: #feac32;
+  background-image: linear-gradient(#fecc4c, #ffac33);
+  border: 3px solid #feac32;
 }
